Fixed the receipt print, just one page now (might spill to two with fees)

--- a/client/views/style.less
+++ b/client/views/style.less
@@ -254,7 +254,6 @@
   }
   .invoice-notes {
     text-align: left;
-    padding-bottom: 30px;
   }
   .invoice-notes p,
   .invoice-notes ul,
@@ -288,7 +287,6 @@
 
     #header {
       overflow: hidden;
-      padding-top: 40px;
     }
 
     .invoice-intro {
